fix big gap on playerName

--- a/style.css
+++ b/style.css
@@ -117,12 +117,12 @@ h1#gameInfo{
   h1 box-icon.left{
     position: relative;
     top: 65px;
-    left: -150px;
+    left: -119px;
   }
   h1 box-icon.right{
     position: relative;
     top: 65px;
-    right: -150px;
+    right: -119px;
   }
 section#playerBoard{
   font-family: 'Neuropolitical';
@@ -135,10 +135,9 @@ section#playerBoard{
   align-items: center;
   position: absolute;
   top: 200px;
-  padding: 0 2.5rem 0 2.5rem;
   transition: all 1.5s ease;
   display: none;
-  gap: 3rem;
+  gap: 1rem;
 }
   section#playerBoard.show{
     display: flex;
@@ -148,7 +147,8 @@ section#playerBoard{
   }
   label{
     display: block;
-    width: 140px;
+    min-width: 140px;
+    max-width: 140px;
     text-align: center;
     font-family: 'Joystix';
   }
